fix navbar search input overflow

--- a/app/assets/stylesheets/parts/layout.css.scss
+++ b/app/assets/stylesheets/parts/layout.css.scss
@@ -82,11 +82,20 @@ body {
       @media screen and (min-width: $screen-sm-min) {
         margin-bottom: 7px;
         margin-top: 7px;
-        width: 16%;
+        transition-duration: .4s;
+        transition-property: width;
+        width: 80px;
       }
 
-      @media screen and (min-width: $screen-md-min) {
-        width: 13%;
+      @media screen and (min-width: $screen-md-min + 100) {
+        width: 15%;
+      }
+
+      &.focus {
+
+        @media screen and (min-width: $screen-sm-min) {
+          width: 25%;
+        }
       }
 
       .form-group {
@@ -113,7 +122,7 @@ body {
   .nav_specials {
 
     a {
-      color: #be433b !important;
+      color: #b93e36 !important;
     }
   }
 
